<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/nav_header_vertical_spacing"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dim_img"
            android:layout_height="@dimen/dim_img"
            android:layout_gravity="center"
            android:contentDescription="@string/nav_header_desc"
            android:layout_weight="1"
            app:srcCompat="@drawable/profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/sub_title"
                android:text="@string/nav_header_title" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/title"
                android:text="@string/nav_header_subtitle" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageArrow"
            android:layout_width="@dimen/dim_arrow"
            android:layout_height="@dimen/dim_arrow"
            android:layout_weight="1"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/arrow" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>