<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.DetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.LinkDevelopment.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="@string/app_name"
            app:popupTheme="@style/Theme.LinkDevelopment.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/nav_header_vertical_spacing">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivImage"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/h196"
                            android:contentDescription="@string/article_image"
                            android:scaleType="fitXY"
                            android:src="@drawable/placeholder" />

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|bottom"
                            android:gravity="end"
                            android:padding="@dimen/nav_header_vertical_spacing"
                            android:text="@string/magazine"
                            android:textColor="@color/white" />
                    </FrameLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/pad16">

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/magazine"
                            android:textColor="@color/title"
                            android:textSize="@dimen/sp24" />

                        <TextView
                            android:id="@+id/tvAuthur"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/magazine"
                            android:textColor="@color/sub_title" />

                        <TextView
                            android:id="@+id/tvDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/nav_header_vertical_spacing"
                            android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                            android:text="@string/magazine"
                            android:textColor="@color/sub_title" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btnWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_website" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>